set(XAUDIO2_AUDIO_SYS_LIB "xaudio2_audio_sys_lib")
set(XAUDIO2_AUDIO_SYS_LIB_DESCRIPTION "XAudio2 Audio System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${XAUDIO2_AUDIO_SYS_LIB} DESCRIPTION ${XAUDIO2_AUDIO_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE XAUDIO2_AUDIO_SYS_LIB_SOURCES *.cpp)

add_library(${XAUDIO2_AUDIO_SYS_LIB} ${XAUDIO2_AUDIO_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
