set(XAUDIO2_AUDIO_SYS_LIB "xaudio2_audio_sys_lib")
set(XAUDIO2_AUDIO_SYS_LIB_DESCRIPTION "XAudio2 Audio System")

project(${XAUDIO2_AUDIO_SYS_LIB} DESCRIPTION ${XAUDIO2_AUDIO_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE XAUDIO2_AUDIO_SYS_LIB_SOURCES 
    *.cpp)

add_library(${XAUDIO2_AUDIO_SYS_LIB} ${XAUDIO2_AUDIO_SYS_LIB_SOURCES})
