set(BBBOX_COLLISION_SYS_LIB "bbox_collision_sys_lib")
set(BBBOX_COLLISION_SYS_LIB_DESCRIPTION "BBox Collision System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${BBBOX_COLLISION_SYS_LIB} DESCRIPTION ${BBBOX_COLLISION_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE BBBOX_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${BBBOX_COLLISION_SYS_LIB} ${BBBOX_COLLISION_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
