set(BBOX_COLLISION_SYS_LIB "bbox_collision_sys_lib")
set(BBOX_COLLISION_SYS_LIB_DESCRIPTION "BBox Collision System")

project(${BBOX_COLLISION_SYS_LIB} DESCRIPTION ${BBOX_COLLISION_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE BBOX_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${BBOX_COLLISION_SYS_LIB} ${BBOX_COLLISION_SYS_LIB_SOURCES})
