set(GENERAL_COLLISION_SYS_LIB "general_collision_sys_lib")
set(GENERAL_COLLISION_SYS_LIB_DESCRIPTION "General Collision System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${GENERAL_COLLISION_SYS_LIB} DESCRIPTION ${GENERAL_COLLISION_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE GENERAL_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${GENERAL_COLLISION_SYS_LIB} ${GENERAL_COLLISION_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
