set(GENERAL_COLLISION_SYS_LIB "general_collision_sys_lib")
set(GENERAL_COLLISION_SYS_LIB_DESCRIPTION "General Collision System")

project(${GENERAL_COLLISION_SYS_LIB} DESCRIPTION ${GENERAL_COLLISION_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE GENERAL_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${GENERAL_COLLISION_SYS_LIB} ${GENERAL_COLLISION_SYS_LIB_SOURCES})
