set(NONE_COLLISION_SYS_LIB "none_collision_sys_lib")
set(NONE_COLLISION_SYS_LIB_DESCRIPTION "none Collision System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${NONE_COLLISION_SYS_LIB} DESCRIPTION ${NONE_COLLISION_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE NONE_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${NONE_COLLISION_SYS_LIB} ${NONE_COLLISION_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
