set(NONE_COLLISION_SYS_LIB "none_collision_sys_lib")
set(NONE_COLLISION_SYS_LIB_DESCRIPTION "none Collision System")

project(${NONE_COLLISION_SYS_LIB} DESCRIPTION ${NONE_COLLISION_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE NONE_COLLISION_SYS_LIB_SOURCES 
    *.cpp)

add_library(${NONE_COLLISION_SYS_LIB} ${NONE_COLLISION_SYS_LIB_SOURCES})
