set(POLYGON_COLLISION_SYS_LIB "polygon_collision_sys_lib")
set(POLYGON_COLLISION_SYS_LIB_DESCRIPTION "Polygon Collision System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${POLYGON_COLLISION_SYS_LIB} DESCRIPTION ${POLYGON_COLLISION_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE POLYGON_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${POLYGON_COLLISION_SYS_LIB} ${POLYGON_COLLISION_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
