set(POLYGON_COLLISION_SYS_LIB "polygon_collision_sys_lib")
set(POLYGON_COLLISION_SYS_LIB_DESCRIPTION "Polygon Collision System")

project(${POLYGON_COLLISION_SYS_LIB} DESCRIPTION ${POLYGON_COLLISION_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE POLYGON_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${POLYGON_COLLISION_SYS_LIB} ${POLYGON_COLLISION_SYS_LIB_SOURCES})
