set(PRECISE_COLLISION_SYS_LIB "precise_collision_sys_lib")
set(PRECISE_COLLISION_SYS_LIB_DESCRIPTION "Precise Collision System")
# set(CMAKE_DEBUG_POSTFIX d)

project(${PRECISE_COLLISION_SYS_LIB} DESCRIPTION ${PRECISE_COLLISION_SYS_LIB_DESCRIPTION})

# include(CTest)
# enable_testing()

file(GLOB_RECURSE PRECISE_COLLISION_SYS_LIB_SOURCES *.cpp)

add_library(${PRECISE_COLLISION_SYS_LIB} ${PRECISE_COLLISION_SYS_LIB_SOURCES})

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
