set(PRECISE_COLLISION_SYS_LIB "precise_collision_sys_lib")
set(PRECISE_COLLISION_SYS_LIB_DESCRIPTION "Precise Collision System")

project(${PRECISE_COLLISION_SYS_LIB} DESCRIPTION ${PRECISE_COLLISION_SYS_LIB_DESCRIPTION})

file(GLOB_RECURSE PRECISE_COLLISION_SYS_LIB_SOURCES 
    *.cpp)

add_library(${PRECISE_COLLISION_SYS_LIB} ${PRECISE_COLLISION_SYS_LIB_SOURCES})
